--- a/src/Pizzashop/Presentation/footerlayout.html.twig
+++ b/src/Pizzashop/Presentation/footerlayout.html.twig
@@ -10,9 +10,9 @@
                     Student PHP Ontwikkelaar<br>
                    VDAB 2014
                 <ul id="social-networking">
-                    <a href="https://twitter.com/BPlaetevoet"><li class="twitter"></li></a>
-                    <a href="https://www.facebook.com/bart.plaetevoet"><li class="facebook"></li></a>
-                    <a href="http://be.linkedin.com/pub/bart-plaetevoet/95/8b2/921"><li class="linkedin"></li></a>
+                    <a href="https://twitter.com/BPlaetevoet" target="_blank"><li class="twitter"></li></a>
+                    <a href="https://www.facebook.com/bart.plaetevoet" target="_blank"><li class="facebook"></li></a>
+                    <a href="http://be.linkedin.com/pub/bart-plaetevoet/95/8b2/921" target="_blank"><li class="linkedin"></li></a>
                 </ul>
                 </p>
                 
