--- a/src/Pizzashop/Presentation/gastenboek.twig
+++ b/src/Pizzashop/Presentation/gastenboek.twig
@@ -2,7 +2,7 @@
 {% extends 'baselayout.html.twig' %}
 {% block content %}
     <div class="container">
-        <section id="gastenboek" class="col-xs-8 col-xs-offset-2">
+        <section id="gastenboek" class="col-xs-8 col-xs-offset-2 text-center">
         <div class="gb-items">
             {% for item in gblijst %}
                 
