--- a/src/Pizzashop/Presentation/form.html.twig
+++ b/src/Pizzashop/Presentation/form.html.twig
@@ -38,7 +38,7 @@
                     {% else %} placeholder="0494010203"{% endif %} />
             {% if 'telefoonnr' in errors|keys %} <span class="help-block"><strong>{{ errors['telefoonnr'] }}</strong></span>{% endif %}
         </div>
-	<div class="form-group{% if ('straat' or 'nr') in errors|keys %} has-error{% endif %}">
+	<div class="form-group{% if ('straat' in errors|keys) or ('nr' in errors|keys)  %} has-error{% endif %}">
             <div class="row">
                 <div class="col-sm-6 xs-12">
 		<label for="straat">Straat</label>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="col-sm-3 col-xs-8">
                 <label for="nummer">Nr</label>
-                <input type="number" class="form-control" id="nummer" name="nr"
+                <input type="number" min="1" class="form-control" id="nummer" name="nr"
                        {% if 'nr' in fields|keys %} value="{{ fields['nr'] }}"{% endif %}/>
                 </div>
                 <div class="col-sm-3 col-xs-4">
